--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+   <head>
+    <!-- ===================== Basic Meta ===================== -->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <title>ريال مدريد - النادي الملكي | الموقع الرسمي</title>
+<meta name="google-site-verification" content="b-6zY1_e7PuuYkq-VMB1gA_kcIEIxUHpAEFM_BJbfTc" />
+    <title>ريال مدريد | الموقع الرسمي للنادي الملكي - أخبار، مباريات، بطولات</title>
+
+    <meta name="description" content="الموقع الرسمي لنادي ريال مدريد ⚽ آخر الأخبار، نتائج المباريات، البطولات، تشكيلة الفريق، الصور والفيديوهات الحصرية للنادي الملكي.">
+    <meta name="keywords" content="ريال مدريد, Real Madrid, النادي الملكي, أخبار ريال مدريد, مباريات ريال مدريد, بطولات ريال مدريد, لاعبي ريال مدريد">
+    <meta name="author" content="Real Madrid CF">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="ar">
+    <meta name="theme-color" content="#FEBE10">
+
+    <!-- ===================== Canonical ===================== -->
+    <link rel="canonical" href="https://www.realmadrid.com/">
+
+    <!-- ===================== Fonts & Icons ===================== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- ===================== Open Graph (Facebook / WhatsApp) ===================== -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ريال مدريد - النادي الملكي | الموقع الرسمي">
+    <meta property="og:description" content="تابع كل ما يخص نادي ريال مدريد من أخبار، مباريات، بطولات ومحتوى حصري.">
+    <meta property="og:url" content="https://www.realmadrid.com/">
+    <meta property="og:image" content="https://www.realmadrid.com/static/images/logo.png">
+    <meta property="og:site_name" content="Real Madrid CF">
+    <meta property="og:locale" content="ar_AR">
+
+    <!-- ===================== Twitter Card ===================== -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ريال مدريد - النادي الملكي | الموقع الرسمي">
+    <meta name="twitter:description" content="آخر أخبار ريال مدريد، المباريات، البطولات، والفيديوهات الحصرية.">
+    <meta name="twitter:image" content="https://www.realmadrid.com/static/images/logo.png">
+
+    <!-- ===================== Schema Markup ===================== -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsTeam",
+      "name": "Real Madrid CF",
+      "url": "https://www.realmadrid.com/",
+      "logo": "https://www.realmadrid.com/static/images/logo.png",
+      "sport": "Football",
+      "sameAs": [
+        "https://www.facebook.com/RealMadrid",
+        "https://www.instagram.com/realmadrid",
+        "https://twitter.com/realmadrid",
+        "https://www.youtube.com/realmadrid"
+      ]
+    }
+    </script>
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"SportsTeam",
+  "name":"Real Madrid CF",
+  "url":"https://eissashaya.github.io/rial_madrid/",
+  "sport":"Football"
+}
+</script>
+
+
     <style>
         /* متغيرات الألوان المحسنة */
         :root {
