--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
    <head>
+    <meta name="google-site-verification" content="b-6zY1_e7PuuYkq-VMB1gA_kcIEIxUHpAEFM_BJbfTc" />
     <!-- ===================== Basic Meta ===================== -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
